--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.2.0",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
